--- a/free_trial.html
+++ b/free_trial.html
@@ -330,7 +330,8 @@
             Please fill out the form below for a free Trial and we will contact
             you or email us at
             <a href="mailto:info@onlinequranclasses.com"
-              >info@MmSoftwareGroup.com</a
+              >
+info@nooralquranacademy.com</a
             >. All registrations and inquiries maximum take 24 hours to respond
             time.
           </p>
@@ -586,6 +587,7 @@
   <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
 
 
