--- a/register.html
+++ b/register.html
@@ -406,9 +406,7 @@
         </div>
     </div>
 
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
 
     <script>
         // Switch between tabs
@@ -607,10 +605,14 @@
 <script defer src="lib/waypoints/waypoints.min.js"></script>
 <script defer src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-
+  <!-- Scripts -->
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
   <!-- Template Javascript -->
   <script src="js/main.js" defer></script>
 </body>
 
 </html>
+
 
