--- a/register.html
+++ b/register.html
@@ -221,14 +221,14 @@
         <div class="row">
           <div class="col-lg-7">
             <div class="hero-header-inner animated zoomIn">
-              <h1 class="display-1 text-dark">About Us</h1>
+              <h1 class="display-1 text-dark">Register Now</h1>
               <ol class="breadcrumb mb-0">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                 <li class="breadcrumb-item">
                   <a href="testimonial.html">Pages</a>
                 </li>
                 <li class="breadcrumb-item text-dark" aria-current="page">
-                  About
+                  Register
                 </li>
               </ol>
             </div>
@@ -614,5 +614,6 @@
 </body>
 
 </html>
+
 
 
