--- a/register.html
+++ b/register.html
@@ -170,7 +170,7 @@
           <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
             <div class="navbar-nav ms-lg-auto mx-xl-auto">
               <a href="index.html" class="nav-item nav-link">Home</a>
-              <a href="about.html" class="nav-item nav-link active">About</a>
+              <a href="about.html" class="nav-item nav-link">About</a>
               <a href="courses.html" class="nav-item nav-link">Courses</a>
               <a href="price.html" class="nav-item nav-link">Pricing</a>
               <div class="nav-item dropdown">
@@ -194,7 +194,7 @@
                   href="listening-quran.html"
                   class="nav-link dropdown-toggle"
                   data-bs-toggle="dropdown"
-                  >More</a
+                  >More active</a
                 >
                 <div class="dropdown-menu m-0 rounded-0">
                   <a href="listening-quran.html" class="dropdown-item"
@@ -614,6 +614,7 @@
 </body>
 
 </html>
+
 
 
 
