--- a/register.html
+++ b/register.html
@@ -192,9 +192,9 @@
               <div class="nav-item dropdown">
                 <a
                   href="listening-quran.html"
-                  class="nav-link dropdown-toggle"
+                  class="nav-link dropdown-toggle active"
                   data-bs-toggle="dropdown"
-                  >More active</a
+                  >More</a
                 >
                 <div class="dropdown-menu m-0 rounded-0">
                   <a href="listening-quran.html" class="dropdown-item"
@@ -614,6 +614,7 @@
 </body>
 
 </html>
+
 
 
 
