--- a/register.html
+++ b/register.html
@@ -457,7 +457,7 @@
         });
     </script>
       <!-- Footer Start -->
-    <div class="container-fluid footer pt-5 wow fadeIn" data-wow-delay="0.1s">
+      <div class="container-fluid footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 0;">
       <div class="container py-5">
         <div class="row py-5">
           <div class="col-lg-7">
@@ -614,6 +614,7 @@
 </body>
 
 </html>
+
 
 
 
